tests/error/type_match/base_case_const_to_non_const_ref.bz
// error: unable to match value of type 'int32' to '&mut int32'
// note: mismatched mutability of types 'int32' and 'mut int32'
function test()
{
	let ci = 0i32;
	let _: &mut int32 = ci;
}
